--- a/blog.css
+++ b/blog.css
@@ -59,6 +59,7 @@ a:visited {
 
 a:visited:hover {
  color: #d9e6f2;
+ text-decoration: none;
 }
 
 
@@ -82,7 +83,6 @@ a:visited:hover {
   width: 200px;
   border: 2px solid black;
   position: relative;
-  top: 200px;
   left: 325px;
 }
 
